--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,7 @@
 table{
-border: 10px solid yellowgreen;
+border: 100000px solid rgb(255,69, 0);
 
 }
 a{ 
-   font-size: xx-large;
+   font-size: xxx-large;
 }
