--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,14 @@
-table{
-border: 100000px solid rgb(255,69, 0);
 
-}
 a{ 
    font-size: xxx-large;
 }
+body {
+   text-align: center;
+   font-family: Helvetica, sans-serif;
+ }
+ #dice {
+   font-size: 320px;
+ }
+ #dice:hover {
+   cursor: pointer;
+ }
